--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,12 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+        <repository>
+          <id>Sonatype</id>
+          <name>Sonatype</name>
+          <url>https://oss.sonatype.org/content/groups/public/</url>
+      </repository>
+
     </repositories>
 
     <distributionManagement>
