--- a/package.conf
+++ b/package.conf
@@ -1,5 +1,5 @@
 package-short-name=java-api
-package-version=dc2c04b
+package-version=dddddd
 package-archive=vamshikr-java-api.zip
 package-dir=vamshikr-java-api
 package-language=Java
