--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>org.continuousassurance.swamp</groupId>
     <artifactId>java-api</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -43,6 +43,47 @@
                     <forkMode>perTest</forkMode>
                     <enableAssertions>true</enableAssertions>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.1.1</version>
+                <executions>
+                    <execution>
+                        <id>bundle-sources</id>
+                        <phase>package</phase>
+                        <goals>
+                            <!-- produce source artifact for main project sources -->
+                            <goal>jar-no-fork</goal>
+
+                            <!-- produce source artifact for project test sources -->
+                            <goal>test-jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <configuration>
+                            <!-- Java 8 specific or empty javadoc tags make the build fail -->
+                            <additionalparam>-Xdoclint:none</additionalparam>
+                        </configuration>
+
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -130,10 +171,10 @@
             </snapshots>
         </repository>
         <repository>
-          <id>Sonatype</id>
-          <name>Sonatype</name>
-          <url>https://oss.sonatype.org/content/groups/public/</url>
-      </repository>
+            <id>Sonatype</id>
+            <name>Sonatype</name>
+            <url>https://oss.sonatype.org/content/groups/public/</url>
+        </repository>
 
     </repositories>
 
