--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   </parent>
   <groupId>org.continuousassurance.swamp</groupId>
   <artifactId>java-api</artifactId>
-  <version>1.3-SNAPSHOT</version>
+  <version>1.4</version>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
